add build method